--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     </section>
     <footer>
       <div class="container">
-        <div class="row footer__row">
+        <div class="row">
           <div class="footer__container">
             <figure>
               <div class="footer__logo">Jose</div>
