--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Advanced E-Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <script
-      src="http://kit.fontawesome.com/c8e4d183c2.js"
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
     <script src="app.js"></script>
